@@ -1,10 +1,0 @@
-Blessings lifts several of curses' limiting assumptions, and it makes your
-code pretty, too:
-* Use styles, color, and maybe a little positioning without necessarily
-  clearing the whole screen first.
-* Leave more than one screenful of scrollback in the buffer after your program
-  exits, like a well-behaved command-line app should.
-* Get rid of all those noisy, C-like calls to tigetstr and tparm, so your code
-  doesn't get crowded out by terminal bookkeeping.
-* Act intelligently when somebody redirects your output to a file, omitting
-  the terminal control codes the user doesn't want to see (optional).
