@@ -1,25 +1,0 @@
-# $NetBSD: Makefile,v 1.7 2024/04/30 14:31:10 wiz Exp $
-
-DISTNAME=	blessings-1.7
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	2
-CATEGORIES=	devel python
-MASTER_SITES=	${MASTER_SITE_PYPI:=b/blessings/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://github.com/erikrose/blessings
-COMMENT=	Thin, practical wrapper around terminal
-LICENSE=	mit
-
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-TOOL_DEPENDS+=	${PYPKGPREFIX}-wheel-[0-9]*:../../devel/py-wheel
-DEPENDS+=	${PYPKGPREFIX}-six-[0-9]*:../../lang/py-six
-TEST_DEPENDS+=	${PYPKGPREFIX}-nose-[0-9]*:../../devel/py-nose
-
-USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-.include "../../lang/python/batteries-included.mk"
-.include "../../lang/python/wheel.mk"
-.include "../../mk/bsd.pkg.mk"
