@@ -1,12 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2024/04/30 14:23:15 wiz Exp $
-${PYSITELIB}/${WHEEL_INFODIR}/LICENSE
-${PYSITELIB}/${WHEEL_INFODIR}/METADATA
-${PYSITELIB}/${WHEEL_INFODIR}/RECORD
-${PYSITELIB}/${WHEEL_INFODIR}/WHEEL
-${PYSITELIB}/${WHEEL_INFODIR}/top_level.txt
-${PYSITELIB}/blessings/__init__.py
-${PYSITELIB}/blessings/__init__.pyc
-${PYSITELIB}/blessings/__init__.pyo
-${PYSITELIB}/blessings/tests.py
-${PYSITELIB}/blessings/tests.pyc
-${PYSITELIB}/blessings/tests.pyo
