@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.6284 2024/10/17 09:24:36 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.6285 2024/10/17 09:25:58 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -9521,3 +9521,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed www/py-raven successor devel/py-sentry-sdk [wiz 2024-10-17]
 	Updated devel/py-curtsies to 0.4.2nb1 [wiz 2024-10-17]
 	Removed devel/py-exam [wiz 2024-10-17]
+	Removed devel/py-blessings [wiz 2024-10-17]
